# Rust-Backend

./: .gitignore  Cargo.toml
src/: api.rs  course_list_scraper.rs  database.rs  encrypted_signing.rs  google_oauth.rs  main.rs  signed_reponse.rs  smtp_mailing_util.rs  stripe_util.rs  utils.rs
src/api/: app_api.rs  mod.rs  stripe_hook.rs  web_api.rs
src/data_structs/: app_config.rs  app_credentials.rs  app_start_request.rs  bu_course.rs  device_meta.rs  grant_level.rs  semester.rs  signed_response.rs  user.rs
src/data_structs/requests/: application_start.rs  application_stopped.rs  email_send_request.rs  registration_notification.rs  session_ping.rs
src/data_structs/responses/: app_start_permission.rs  signable_data.rs  status_response.rs  web_register_response.rs
