[package]
name = "aseefian_licensing_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.4.0"
yaml-rust = "^0.4.5"
ring = "^0.16.20"
untrusted = "^0.9.0"
sqlx = { version = "^0.7.1", features = [ "runtime-tokio", "mysql" ] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0.107"
futures = "^0.3"
chrono = "^0.4.5"
chrono-tz = "^0.8.3"
base64 = "^0.21.4"
once_cell = "^1.18.0"
tokio = "^1.19.2"
lettre = "^0.10.4"
rand = "^0.8.5"
reqwest = { version = "^0.11.20", features = ["json"] }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.7"