[package]
name = "aseefian_licensing_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.4"
yaml-rust = "^0.4"
ring = "^0.16"
untrusted = "^0.9"
sqlx = { version = "^0.7", features = [ "runtime-tokio", "mysql" ] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
futures = "^0.3"
chrono = "^0.4"
chrono-tz = "^0.8"
base64 = "^0.21"
once_cell = "^1.18"
tokio = "^1.19"
lettre = "^0.10"
rand = "^0.8"
reqwest = { version = "^0.11", features = ["json"] }
jwt = "^0.16"
hmac = "^0.12"
sha2 = "^0.10"
env_logger = "^0.10"